# mmmu

./: .clang-format  CMakeLists.txt  README.md  pyproject.toml
src/mmu/: __init__.py
src/mmu-core/include/mmu/: bivariate_bounds.hpp  common.hpp  confmat.hpp  main.hpp  multn_profile.hpp
src/mmu-core/src/: bindings.cpp  bivariate_bounds.cpp  main.cpp  multn_profile.cpp
tests/: test_extension.py
